{
    "name": "NoteInput",
    "maps": [
        {
            "name": "Rhythm",
            "id": "b098d13a-d485-4ca1-be30-5a37649ed3ab",
            "actions": [
                {
                    "name": "Lane1",
                    "type": "Button",
                    "id": "08b76db9-4c2f-43c2-81ea-bcd1a5e9d447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane2",
                    "type": "Button",
                    "id": "40de753e-967b-4de0-bebe-86f9cfe4b571",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane3",
                    "type": "Button",
                    "id": "3309ea73-8501-4a63-b34c-7df307b14b34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane4",
                    "type": "Button",
                    "id": "5c50cb0b-b9d6-487a-b473-f57155dea9aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d863673c-fa67-4b41-9f24-b3dec24a8a8b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99174b6b-c1cd-44dc-961a-f1141dae4a84",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "731a50cf-b3a6-481f-8128-e6a1f30a634f",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "650976cc-3349-4092-8877-25e2cb9dcd8a",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}